--- a/alacritty.yml
+++ b/alacritty.yml
@@ -261,48 +261,40 @@ font:
 #  text: CellBackground
 #  background: CellForeground
 
-# Colors (Hyper) see https://github.com/eendroroy/alacritty-theme/blob/master/themes/hyper.yaml
+# Color theme ported from iTerm 2: Smoooooth: https://github.com/eendroroy/alacritty-theme/blob/master/themes/smoooooth.yml
 colors:
   primary:
-    background: "0x000000"
-    foreground: "0xffffff"
+    background: "0x14191e"
+    foreground: "0xdbdbdb"
   cursor:
-    text: "0xF81CE5"
-    cursor: "0xffffff"
-
+    text: "0x000000"
+    cursor: "0xfefffe"
+  selection:
+    text: "0x000000"
+    background: "0xb3d7ff"
   normal:
-    black: "0x000000"
-    red: "0xfe0100"
-    green: "0x33ff00"
-    yellow: "0xfeff00"
-    blue: "0x0066ff"
-    magenta: "0xcc00ff"
-    cyan: "0x00ffff"
-    white: "0xd0d0d0"
-
+    black: "0x14191e"
+    red: "0xb43c29"
+    green: "0x00c200"
+    yellow: "0xc7c400"
+    blue: "0x2743c7"
+    magenta: "0xbf3fbd"
+    cyan: "0x00c5c7"
+    white: "0xc7c7c7"
   bright:
-    black: "0x808080"
-    red: "0xfe0100"
-    green: "0x33ff00"
-    yellow: "0xfeff00"
-    blue: "0x0066ff"
-    magenta: "0xcc00ff"
-    cyan: "0x00ffff"
-    white: "0xFFFFFF"
+    black: "0x676767"
+    red: "0xdc7974"
+    green: "0x57e690"
+    yellow: "0xece100"
+    blue: "0xa6aaf1"
+    magenta: "0xe07de0"
+    cyan: "0x5ffdff"
+    white: "0xfeffff"
 
 # Dim colors
 #
 # If the dim colors are not set, they will be calculated automatically based
 # on the `normal` colors.
-#dim:
-#  black:   '#131415'
-#  red:     '#864343'
-#  green:   '#777c44'
-#  yellow:  '#9e824c'
-#  blue:    '#556a7d'
-#  magenta: '#75617b'
-#  cyan:    '#5b7d78'
-#  white:   '#828482'
 
 # Indexed Colors
 #
