treat .gitconfig.local as in dotfiles repository

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,5 +5,5 @@
 [pull]
 	rebase = false
 [include] # 公開リポジトリに置かない情報をincludeする。
-	path = ~/.gitconfig.local
+	path = ~/dotfiles/.gitconfig.local
 	# user.mail
