add tpm & tmux-sensible

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,9 @@
 # マウスを有効化
 setw -g mouse on
 
+# tmux plugins by tpm
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
