apply TrueColor to tmux & alacritty

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,10 @@
 # マウスを有効化
 setw -g mouse on
 
+# True Color対応
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
 # tmux plugins by tpm
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
