add copy mode settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,11 @@ setw -g mouse on
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
+# Copy mode設定
+setw -g mode-keys vi
+# vキーでテキスト選択開始
+bind -T copy-mode-vi v send -X begin-selection
+
 # tmux plugins by tpm
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
