--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,7 @@ bind -T copy-mode-vi v send -X begin-selection
 # tmux plugins by tpm
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 # Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
