--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,5 +15,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 
+set -g @plugin 'dracula/tmux'
+set -g @dracula-plugins "cpu-usage ram-usage network-bandwidth"
+
 # Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
