add tmux_popup script and key binding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,9 @@ setw -g mode-keys vi
 # vキーでテキスト選択開始
 bind -T copy-mode-vi v send -X begin-selection
 
+# tmux popup
+bind m run-shell "sh ~/dotfiles/.tmux/tmux_popup.sh"
+
 # tmux plugins by tpm
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
