--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -1,3 +1,5 @@
 # default settings: https://github.com/jesseduffield/lazygit/blob/master/docs/Config.md
+git:
+  branchLogCmd: "git log --graph --color=always --abbrev-commit --decorate --date=relative --pretty=medium --oneline {{branchName}} --"
 os:
   openCommand: "code {{filename}}"
