--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -17,7 +17,7 @@ bind m run-shell "sh ~/dotfiles/.tmux/tmux_popup.sh"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'dracula/tmux'
 set -g @dracula-plugins "cpu-usage ram-usage network-bandwidth"
 
