--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -18,6 +18,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-yank'
+# clipperにより、リモートUbuntu環境のクリップボード内容を転送する
+if-shell -b '[ "$(uname)" = "Linux" ]' \
+  'set -g @override_copy_command "nc -N localhost 8377"'
 set -g @plugin 'dracula/tmux'
 set -g @dracula-plugins "cpu-usage ram-usage network-bandwidth"
 
