--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -18,11 +18,14 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'roosta/tmux-fuzzback'
+set -g @fuzzback-popup 1
+set -g @fuzzback-popup-size '90%'
 # clipperにより、リモートUbuntu環境のクリップボード内容を転送する
 if-shell -b '[ "$(uname)" = "Linux" ]' \
   'set -g @override_copy_command "nc -N localhost 8377"'
+
 set -g @plugin 'dracula/tmux'
 set -g @dracula-plugins "cpu-usage ram-usage network-bandwidth"
-
 # Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
