--- a/navi/config.yaml
+++ b/navi/config.yaml
@@ -15,7 +15,7 @@ style:
 
 finder:
   command: fzf # equivalent to the --finder option
-  # overrides: --tac # equivalent to the --fzf-overrides option
+  overrides: --reverse # equivalent to the --fzf-overrides option
   # overrides_var: --tac # equivalent to the --fzf-overrides-var option
 
 cheats:
