enable home/end key with tmux xterm-256color

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -4,6 +4,9 @@ setw -g mouse on
 # True Color対応
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
+# enable home/end key with xterm-256color. see: https://stackoverflow.com/questions/18600188/home-end-keys-do-not-work-in-tmux
+bind-key -n Home send Escape "OH"
+bind-key -n End send Escape "OF"
 
 # Copy mode設定
 setw -g mode-keys vi
