--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .zsh/local.zsh
 .gitconfig.local
-alacritty/alacritty.local.yml
+alacritty/alacritty.local.toml
 navi/cheats/local/**
 multipass/cloud-init.yaml
 Brewfile.dump.rb
