format toml files by taplo

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,1 +1,4 @@
-import = ["~/dotfiles/alacritty/alacritty.common.toml", "~/dotfiles/alacritty/alacritty.local.toml"]
+import = [
+  "~/dotfiles/alacritty/alacritty.common.toml",
+  "~/dotfiles/alacritty/alacritty.local.toml",
+]
