--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -27,5 +27,6 @@ set -g @fuzzback-popup-size '90%'
 
 set -g @plugin 'dracula/tmux'
 set -g @dracula-plugins "cpu-usage ram-usage network-bandwidth"
+set -g @dracula-show-left-icon session
 # Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
