--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -1,4 +1,5 @@
 setw -g mouse on
+set -sg escape-time 10 # to avoid strange string insert like rgb:dbdb/dbdb It happens on VSCode terminal.
 set-option -g default-shell "$ZSH_PATH_FOR_TMUX" # .zshrcで設定した環境変数を参照する
 
 # True Color対応
