--- a/alacritty/alacritty.common.toml
+++ b/alacritty/alacritty.common.toml
@@ -35,6 +35,8 @@ TERM = "xterm-256color"
 
 [font]
 size = 16
+offset.x = 0
+offset.y = -1
 
 [font.bold]
 family = "JetBrains Mono"
@@ -47,10 +49,6 @@ style = "Italic"
 [font.normal]
 family = "JetBrains Mono"
 style = "Regular"
-
-[font.offset]
-x = 0
-y = -1
 
 [[keyboard.bindings]]
 action = "ScrollPageUp"
