add Nerd Font config

--- a/alacritty/alacritty.local.example.toml
+++ b/alacritty/alacritty.local.example.toml
@@ -4,3 +4,15 @@ size = 14
 [shell]
 program = "/bin/zsh"
 args = ["--login"]
+
+[font.bold]
+family = "JetBrainsMono Nerd Font"
+style = "Bold"
+
+[font.italic]
+family = "JetBrainsMono Nerd Font"
+style = "Italic"
+
+[font.normal]
+family = "JetBrainsMono Nerd Font"
+style = "Regular"
