--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -1,6 +1,6 @@
 setw -g mouse on # can scroll with mouse, but I don't want to copy
 set -sg escape-time 20 # to avoid strange string insert like rgb:dbdb/dbdb It happens on VSCode terminal.
-set-option -g default-shell "$ZSH_PATH_FOR_TMUX" # .zshrcで設定した環境変数を参照する
+set -g default-shell "$ZSH_PATH_FOR_TMUX" # .zshrcで設定した環境変数を参照する
 
 # True Color対応
 set -g default-terminal "xterm-256color"
@@ -29,5 +29,6 @@ set -g @fuzzback-popup-size '90%'
 set -g @plugin 'dracula/tmux'
 set -g @dracula-plugins "cpu-usage ram-usage network-bandwidth"
 set -g @dracula-show-left-icon session
+
 # Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
