OSC 52 also on tmux

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -2,6 +2,9 @@ setw -g mouse on # can scroll with mouse, but I don't want to copy
 set -sg escape-time 20 # to avoid strange string insert like rgb:dbdb/dbdb It happens on VSCode terminal.
 set -g default-shell "$ZSH_PATH_FOR_TMUX" # .zshrcで設定した環境変数を参照する
 
+set -g set-clipboard on
+set -s copy-command pbcopy # specific for macOS
+
 # True Color対応
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
