--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -25,6 +25,12 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 
+set -g @plugin 'fcsonline/tmux-thumbs'
+run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
+set -g @thumbs-command 'tmux set-buffer -- {} && echo {} | pbcopy && tmux display-message \"Copied {}\"'
+# specific for macOS, but somehow OSC 52 integration is not working
+# set -g @thumbs-osc52 1
+
 set -g @plugin 'dracula/tmux'
 set -g @dracula-plugins "cpu-usage ram-usage network-bandwidth"
 set -g @dracula-show-left-icon session
