add workaround comments

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -3,7 +3,8 @@ set -sg escape-time 20 # to avoid strange string insert like rgb:dbdb/dbdb It ha
 set -g default-shell "$ZSH_PATH_FOR_TMUX" # .zshrcで設定した環境変数を参照する
 
 set -g set-clipboard on
-set -s copy-command pbcopy # specific for macOS
+# workaround. OSC 52 is not working on VSCode terminal
+# set -s copy-command pbcopy
 
 # True Color対応
 set -g default-terminal "xterm-256color"
@@ -27,9 +28,10 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 set -g @plugin 'fcsonline/tmux-thumbs'
 run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
-set -g @thumbs-command 'tmux set-buffer -- {} && echo {} | pbcopy && tmux display-message \"Copied {}\"'
-# specific for macOS, but somehow OSC 52 integration is not working
+# It seems enabling OSC 52 is just enough, but not working.
+# workaround using pbcopy
 # set -g @thumbs-osc52 1
+set -g @thumbs-command 'tmux set-buffer -- {} && echo -n {} | pbcopy'
 
 set -g @plugin 'dracula/tmux'
 set -g @dracula-plugins "cpu-usage ram-usage network-bandwidth"
