add OS specific branching

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -4,7 +4,7 @@ set -g default-shell "$ZSH_PATH_FOR_TMUX" # .zshrcで設定した環境変数を
 
 set -g set-clipboard on
 # workaround. OSC 52 is not working on VSCode terminal
-# set -s copy-command pbcopy
+if-shell "uname | grep -q Darwin" "set -s copy-command pbcopy"
 
 # True Color対応
 set -g default-terminal "xterm-256color"
@@ -28,14 +28,14 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 set -g @plugin 'fcsonline/tmux-thumbs'
 run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
-# It seems enabling OSC 52 is just enough, but not working.
-# workaround using pbcopy
+# It seems enabling OSC 52 is just enough, but not working. workaround using pbcopy
 # set -g @thumbs-osc52 1
-set -g @thumbs-command 'tmux set-buffer -- {} && echo -n {} | pbcopy'
+if-shell "uname | grep -q Darwin" "set -g @thumbs-command 'tmux set-buffer -- {} && echo -n {} | pbcopy'"
 
 set -g @plugin 'dracula/tmux'
 set -g @dracula-plugins "cpu-usage ram-usage network-bandwidth"
 set -g @dracula-show-left-icon session
 
+# set -sg escape-time 20 # to avoid strange string insert like rgb:dbdb/dbdb It happens on VSCode terminal. override tmux-sensible.
 # Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
