ruby-lsp for formatting

--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -2,20 +2,14 @@
 command = "ruby-lsp"
 args = []
 
+[language-server.ruby-lsp.config]
+rubyVersionManager = 'asdf'
+formatter = 'syntax_tree'
+
 [language-server.sorbet]
 command = "srb"
 args = ["tc", "--lsp"]
 
-[language-server.stree]
-command = "stree"
-args = [
-  "lsp",
-  "--plugins",
-  "plugin/single_quotes",
-  "plugin/trailing_comma",
-  '--print-width',
-  '120',
-]
 
 [language-server.deno-lsp]
 command = "deno"
@@ -43,10 +37,8 @@ language-servers = [
     "goto-implementation",
     "completion",
     "rename-symbol",
-    "format",
   ] },
   "sorbet",
-  "stree",
 ]
 auto-format = true
 
