--- a/helix/config.toml
+++ b/helix/config.toml
@@ -35,7 +35,9 @@ S-tab = ":buffer-previous"
 g = ":sh tmux display-message -p -F\"#{pane_current_path}\" | xargs tmux display-popup -xC -yC -w90% -h90% -E lazygit -p"
 o = [
   ":new",
-  ":insert-output tmux display-popup -xC -yC -w90% -h90% -E 'yazi .' && pbpaste", # TODO: not using pbpaste
+  # ":insert-output tmux display-popup -xC -yC -w90% -h90% -E 'yazi .' && pbpaste", # TODO: not using pbpaste
+  ":insert-output ~/dotfiles/helix/external_filer.sh",
+  "split_selection_on_newline",
   "goto_file",
   "goto_last_modified_file",
   ":buffer-close!",
