--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -7,8 +7,8 @@ rubyVersionManager = 'asdf'
 formatter = 'syntax_tree'
 
 [language-server.sorbet]
-command = "srb"
-args = ["tc", "--lsp"]
+command = "bundle"
+args = ["exec", "srb", "tc", "--lsp"]
 
 [language-server.rubocop]
 command = "bundle"
