--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -1,6 +1,6 @@
 setw -g mouse on # can scroll with mouse, but I don't want to copy
 set -sg escape-time 20 # to avoid strange string insert like rgb:dbdb/dbdb It happens on VSCode terminal.
-set -g default-shell "$ZSH_PATH_FOR_TMUX" # .zshrcで設定した環境変数を参照する
+# set -g default-shell "$ZSH_PATH_FOR_TMUX" # .zshrcで設定した環境変数を参照する
 
 set -g set-clipboard on
 # workaround. OSC 52 is not working on VSCode terminal
